--- a/recipies/pizza.html
+++ b/recipies/pizza.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipies</title>
+    <title>Odin Recipies - Pizza</title>
 </head>
 <body>
-    <h1>Odin Recipies</h1>
-    <a href="recipies/pizza.html">Homemade Pepperoni Pizza</a>
+    <h1>Homemade Pepperoni Pizza</h1>
+    <a href="../index.html">Home</a>
+    <br><br>
+    <img src="../images/pizza.webp" width="500">
+
+    <br>
+
+
 </body>
 </html>
