--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href="recipies/pizza.html">Homemade Pepperoni Pizza</a>
+    <a href="recipies/no-bake-chocolate-oatmeal-cookies.html">No Bake Chocolate Oatmeal Cookies</a>
 </body>
 </html>
