Change recipe list to use <ul>

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="recipies/pizza.html">Homemade Pepperoni Pizza</a>
-    <br>
-    <a href="recipies/no-bake-chocolate-oatmeal-cookies.html">No Bake Chocolate Oatmeal Cookies</a>
-    <br>
-    <a href="recipies/reuben-sandwich.html">Reuben Sandwich</a>
+    <ul>
+        <li><a href="recipies/pizza.html">Homemade Pepperoni Pizza</a></li>
+        <li><a href="recipies/no-bake-chocolate-oatmeal-cookies.html">No Bake Chocolate Oatmeal Cookies</a></li>
+        <li><a href="recipies/reuben-sandwich.html">Reuben Sandwich</a></li>
+    </ul>
 </body>
 </html>
